interface inicial da Issue #17

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,38 @@
 <ion-header>
   <ion-toolbar>
+    
     <ion-title>
-      Ionic Blank
+        <button ion-button (click)="voltar()">
+            <ion-icon name="arrow-round-back"></ion-icon>
+        </button>
+      CADÊ - Anúncios
     </ion-title>
   </ion-toolbar>
+  
 </ion-header>
 
 <ion-content>
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+    Nenhum anúncio encontrado no momento.
+    
   </div>
+
+  <div>
+
+  </div>
+  
 </ion-content>
+
+<ion-footer>
+    <ion-toolbar>
+        <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+            <ion-refresher-content
+              pullingIcon="arrow-dropdown"
+              pullingText="Pull to refresh"
+              refreshingSpinner="circles"
+              refreshingText="Refreshing...">
+            </ion-refresher-content>
+          </ion-refresher>
+    </ion-toolbar>
+    
+</ion-footer>
