inserção de um botão que liga a página home a página de cadastro de perfil e criação da página inicial de cadastro #20

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,6 +21,8 @@
       refreshingText="Refreshing...">
     </ion-refresher-content>
   </ion-refresher>
+
+  <ion-button href="/cadastro">Criar perfil</ion-button>
   
 </ion-content>
 
