--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,6 +11,7 @@
 <ion-content>
   <div class="ion-padding">
     Nenhum anúncio encontrado no momento.
+    <ion-button id="Cadastro-anuncio">Cadastro-anuncio</ion-button>
   </div>
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
