--- a/src/app/cadastro-anuncio/cadastro-anuncio.page.html
+++ b/src/app/cadastro-anuncio/cadastro-anuncio.page.html
@@ -4,12 +4,12 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <iond-grid>
+  <ion-grid>
     <ion-row>
       <ion-col size-md="6" offset-md="3">
         <ion-card>
           <ion-card-header>
-            <ion-card-tittle>Novo Anuncio</ion-card-tittle>
+            <ion-card-title>Novo Anuncio</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <ion-item>
@@ -20,12 +20,17 @@
               <ion-label position="floating">Descrição:</ion-label>
               <ion-input type="text"></ion-input>
             </ion-item>
-            <!--
+           
             <ion-item>
-              <ion-label>MM DD YY</ion-label>
-              <ion-datetime displayFormat="MM DD YY" placeholder="Select Date"></ion-datetime>
+              <ion-label>Data de inicio:</ion-label>
+              <ion-datetime displayFormat="DD MM YY" placeholder="Escolha a data"></ion-datetime>
             </ion-item>
-            -->
+
+            <ion-item>
+              <ion-label>Data de fim:</ion-label>
+              <ion-datetime displayFormat="DD MM YY" placeholder="Escolha a data"></ion-datetime>
+            </ion-item>
+           
             <div margin-vertical text-right>
               <ion-button fill="outline" color="danger">Cancelar</ion-button>
               <ion-button>Publicar</ion-button>
@@ -34,5 +39,5 @@
         </ion-card>
       </ion-col>
     </ion-row>
-  </iond-grid> 
+  </ion-grid> 
 </ion-content>
