--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -31,7 +31,7 @@
       </ion-list>
   </div>
 
-  <ion-button fill="outline" href="/cad-anuncio">Cadastrar Anúncio</ion-button>
+  <ion-button fill="outline" href="/maps">Cadastrar Anúncio</ion-button>
   <ion-button fill="outline" href="/cad-perfil">Cadastrar Perfil</ion-button>
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
