--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -31,8 +31,8 @@
       </ion-list>
   </div>
 
-  <ion-button fill="outline" href="/cad-anuncio">Cadastrar Anúncio</ion-button>
-  <ion-button fill="outline" href="/cad-perfil">Cadastrar Perfil</ion-button>
+  <ion-button fill="outline" routerLink="/cad-anuncio">Cadastrar Anúncio</ion-button>
+  <ion-button fill="outline" routerLink="/cad-perfil">Cadastrar Perfil</ion-button>
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
     <ion-refresher-content
