--- a/src/app/cadastro-anuncio/maps/maps.page.html
+++ b/src/app/cadastro-anuncio/maps/maps.page.html
@@ -1,9 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="voltar()">
-        <ion-icon slot="start" name="arrow-dropleft-circle"></ion-icon>
-      </ion-button>
+        <ion-back-button defaultHref="cad-anuncio"></ion-back-button>
     </ion-buttons>
     <ion-title>Escolha um Local para o Anúncio</ion-title>
   </ion-toolbar>
