--- a/src/app/portal-anunciante/portal-anunciante.page.html
+++ b/src/app/portal-anunciante/portal-anunciante.page.html
@@ -37,7 +37,8 @@
       </ion-list>
   </div>
 
-  <ion-button fill="outline" routerLink="/maps" routerDirection="forward">Cadastrar Anúncio</ion-button>
+  <!-- <ion-button fill="outline" routerLink="/maps" routerDirection="forward">Cadastrar Anúncio</ion-button> -->
+  <ion-button fill="outline" routerLink="/cad-anuncio" routerDirection="forward">Cadastrar Anúncio</ion-button>
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
     <ion-refresher-content
