salvando mudanças em login

--- a/src/app/cadanunciante/cadanunciante.page.html
+++ b/src/app/cadanunciante/cadanunciante.page.html
@@ -1,11 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>cadastro-anunciante</ion-title>
+    <ion-title>Cadastro</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Cadastro</h2>
+<ion-content>
   <form>
     <ion-list>
       <ion-item>
