--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -18,6 +18,9 @@
     <div margin-vertical text-right>
      <ion-button (click)="login()">Login</ion-button>
     </div>
+    <div margin-vertical text-left>
+        <ion-button (click)="irCadastro()">Registrar</ion-button>
+    </div>
   </ion-col> 
   
 </ion-row> 
