--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,7 +8,7 @@
 <ion-row>
   <ion-col size-md="6" offset-md="3">
     <ion-item>
-      <ion-label position="floating">Usuário:</ion-label>
+      <ion-label position="floating">E-mail:</ion-label>
       <ion-input type="text" [(ngModel)]="username"></ion-input>
     </ion-item>
     <ion-item>
