--- a/src/app/cadastro-perfil/cadastro-perfil.page.html
+++ b/src/app/cadastro-perfil/cadastro-perfil.page.html
@@ -34,7 +34,7 @@
                 </ion-item>
               </ion-list>
 
-              <div margin-vertical text-right>
+              <div ion-margin-vertical ion-text-right>
                 <ion-button fill="outline" color="danger" (click)="cancelar()">Cancelar</ion-button>
                 <ion-button type="submit">Publicar</ion-button>
                 <ion-button fill="outline" href="/cad-anun">Anunciante? Cadastre-se!</ion-button>
