--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,6 +24,8 @@
           
             <ion-card-content>
               {{an.descricao}}
+              <p></p>
+              <div style="font-weight: bold;">A {{distance(an)}} de você</div>
             </ion-card-content>
 
           </ion-card>
