--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -27,8 +27,12 @@
             </ion-card-content>
 
           </ion-card>
+          <div class="ion-padding">
+            <ion-button expand="block" (click)="compartilharTexto()">Compartilhar texto</ion-button>
+          </div> 
         </ion-item>
       </ion-list>
+      
   </div>
 
   <ion-button fill="outline" routerLink="/portal-anunciante">Portal do Anunciante</ion-button>
@@ -42,6 +46,7 @@
       refreshingText="Refreshing...">
     </ion-refresher-content>
   </ion-refresher>
+  
   
 </ion-content>
 
