#51 WIP missing tests

--- a/src/app/portal-anunciante/portal-anunciante.page.html
+++ b/src/app/portal-anunciante/portal-anunciante.page.html
@@ -23,6 +23,8 @@
           
             <ion-card-content>
               {{an.descricao}}
+              <p></p>
+              <div style="font-weight: bold;">Visto {{an.views}} vezes</div>
               <ion-toolbar>
                 <ion-buttons slot="start">
                   <ion-button (click)="editar(an)">
